--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
     "awesome-debounce-promise": "^2.1.0",
+    "fetch-mock": "^7.3.3",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -18,6 +19,7 @@
     "react-scripts": "3.0.1",
     "react-spinner-material": "^1.1.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
